--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+#spring
+spring.application.name=omealjomeal
 spring.datasource.url=jdbc:mysql://localhost:3306/omealjomeal?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=omeal
 spring.datasource.password=jomeal
@@ -8,5 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis
 mybatis.mapper-locations=com/config/*Mapper.xml
 mybatis.type-aliases-package=com.omealjomeal.dto
-mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=NULL
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
