--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 #spring
 spring.application.name=omealjomeal
-spring.datasource.url=jdbc:mysql://localhost:3306/omealjomeal?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/omealjomeal?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=omeal
 spring.datasource.password=jomeal
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
