--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 spring.application.name=omealjomeal
 spring.datasource.url=jdbc:mysql://localhost:3306/omealjomeal?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=omeal
-spring.datasource.password=jomeal
+spring.datasource.password=Jomeal@!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis
