fix: Oracle DB로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,15 @@ server.port=8080
 
 #spring
 spring.application.name=omealjomeal
-spring.datasource.url=jdbc:mysql://localhost:3306/omealjomeal?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=omeal
-spring.datasource.password=Jomeal@!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# DB ?? 4?? ?? ??
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@omealjomeal_high?TNS_ADMIN=Wallet_OmealJomeal
+spring.datasource.username=ADMIN
+spring.datasource.password=OmealJomeal99@!
+
+# ??? ??? java.io.FileNotFoundException ?? ? ?
+server.tomcat.additional-tld-skip-patterns=*oraclepki*
 
 # mybatis
 mybatis.mapper-locations=com/config/*Mapper.xml
