--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>OmealJomeal</description>
     <properties>
         <java.version>1.8</java.version>
+        <frontend-src-dir>${project.basedir}/frontend</frontend-src-dir>
+        <frontend-maven-plugin.version>1.9.1</frontend-maven-plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -77,47 +79,30 @@
     </dependencies>
 
     <build>
-        <plugins>
+        <plugins>    <!-- Spring boot를 jar로 실행 시키기 위한 빌드 패키지 -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
+            <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
+            </plugin>    <!-- React를 빌드하기 위한 패키지 -->
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.9.1</version>
+                <version>${frontend-maven-plugin.version}</version>
+                <!-- 버전 설정은 build를 하는 환경의 nodejs와 npm 버전 설정 -->
                 <configuration>
-                    <workingDirectory>frontend</workingDirectory>
-                    <installDirectory>target</installDirectory>
-                </configuration>
+                    <nodeVersion>v16.15.1</nodeVersion>
+                    <npmVersion>8.11.0</npmVersion>
+                    <workingDirectory>${frontend-src-dir}</workingDirectory>
+                    <installDirectory>${project.build.directory}</installDirectory>
+                </configuration>      <!-- 실행 명령어 -->
                 <executions>
                     <execution>
-                        <id>install node and npm</id>
+                        <id>install-frontend-tools</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
-                        <configuration>
-                            <nodeVersion>v16.15.1</nodeVersion>
-                            <npmVersion>8.11.0</npmVersion>
-                        </configuration>
                     </execution>
+                    <!-- npm 패키지 다운 및 설치 -->
                     <execution>
                         <id>npm install</id>
                         <goals>
@@ -127,13 +112,37 @@
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
+                    <!-- npm 빌드 -->
                     <execution>
-                    <id>npm run build</id>
+                        <id>npm run build</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
                         <configuration>
                             <arguments>run build</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- React가 빌드된 폴더에서 Spring boot 프로젝트로 복사하는 패키지 -->
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>position-react-build</id>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                            <!-- Spring boot의 html 파일 경로 -->
+                            <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${frontend-src-dir}/build</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
                         </configuration>
                     </execution>
                 </executions>
@@ -157,6 +166,7 @@
                 </executions>
             </plugin>
         </plugins>
+
     </build>
 
 </project>
