--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ mybatis.type-aliases-package=com.omealjomeal.dto
 mybatis.configuration.jdbc-type-for-null=NULL
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# ?? ???
+spring.servlet.multipart.location=/omealjomeal/upload/
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
