--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.servlet.multipart.location=/Users/ijeon-yeong/Desktop/OmealJomeal/frontend/public/img
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
+
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@omealjomeal_high?TNS_ADMIN=Wallet_OmealJomeal
+spring.datasource.username=ADMIN
+spring.datasource.password=OmealJomeal99@!
