--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@omealjomeal_high?TNS_ADMIN=Wallet_OmealJomeal
+spring.datasource.url=jdbc:oracle:thin:@omealjomeal_low?TNS_ADMIN=Wallet_OmealJomeal
 spring.datasource.username=ADMIN
 spring.datasource.password=OmealJomeal99@!
