--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://13.209.72.164:8080/",
+  "proxy": "http://localhost:8080/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
